--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
   <!-- App LESS -->
   <link href="css/app.less" type="text/css" rel="stylesheet/less">
+  <link href="bower_components/ionic/release/css/ionic.css" type="text/css" rel="stylesheet/css">
 
 </head>
 <body>
@@ -17,10 +18,14 @@
 
   <!-- JS from Bower components -->
   <script src="bower_components/less/dist/less-1.5.1.js" data-build="exclude"></script>
-  <script src="bower_components/angular/angular.min.js"></script>
+  <script src="bower_components/angular/angular.js"></script>
   <script src="bower_components/angular-resource/angular-resource.js"></script>
-  <script src="bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
-  <script src="bower_components/moment/min/moment.min.js"></script>
+  <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
+  <script src="bower_components/angular-animate/angular-animate.js"></script>
+  <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
+  <script src="bower_components/moment/moment.js"></script>
+  <script src="bower_components/ionic/release/js/ionic.js"></script>
+  <script src="bower_components/ionic/release/js/ionic-angular.js"></script>
 
   <!-- Main App JS -->
   <script src="js/setup.js"></script>
