--- a/test/unit/index.html
+++ b/test/unit/index.html
@@ -16,8 +16,12 @@
   <script src="../../bower_components/less/dist/less-1.5.1.js"></script>
   <script src="../../bower_components/angular/angular.js"></script>
   <script src="../../bower_components/angular-resource/angular-resource.js"></script>
+  <script src="../../bower_components/angular-sanitize/angular-sanitize.js"></script>
+  <script src="../../bower_components/angular-animate/angular-animate.js"></script>
   <script src="../../bower_components/angular-ui-router/release/angular-ui-router.js"></script>
   <script src="../../bower_components/moment/moment.js"></script>
+  <script src="../../bower_components/ionic/release/js/ionic.js"></script>
+  <script src="../../bower_components/ionic/release/js/ionic-angular.js"></script>
 
   <!-- Test libraries -->
   <script src="../../node_modules/mocha/mocha.js"></script>
