--- a/test/unit/index.html
+++ b/test/unit/index.html
@@ -57,6 +57,7 @@
   <script src="../../partial/week/project/week/project.js"></script>
   <script src="../../partial/week/user/week/user.js"></script>
   <script src="../../partial/menu/menu.js"></script>
+  <script src="../../partial/tabs/tabs.js"></script>
   <!-- Add New Partial JS Above -->
 
 
@@ -84,6 +85,7 @@
   <script src="controller/week/project.js"></script>
   <script src="controller/week/user.js"></script>
   <script src="controller/menu.js"></script>
+  <script src="controller/tabs.js"></script>
   <!-- Add New Partial Test JS Above -->
 
   <!-- run mocha after all test are loaded -->
