--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
   <!-- Add New Model JS Above --> 
 
   <!-- Directive JS -->
+  <script src="directive/week/week.js"></script>
   <!-- Add New Directive JS Above -->
 
   <!-- Filter JS -->
