--- a/test/unit/index.html
+++ b/test/unit/index.html
@@ -47,6 +47,7 @@
   <!-- Add New Model JS Above --> 
 
   <!-- Directive JS -->
+  <script src="../../directive/week/week.js"></script>
   <!-- Add New Directive JS Above -->
 
   <!-- Filter JS -->
@@ -75,6 +76,7 @@
 
   <!-- Directive Test JS -->
   <script src="directive/weekChooser.js"></script>
+  <script src="directive/week.js"></script>
   <!-- Add New Directive Test JS Above -->
 
   <!-- Filter Test JS -->
