--- a/directive/week/week.html
+++ b/directive/week/week.html
@@ -1,8 +1,8 @@
-<svg  width="640" height="500">  
+<svg  width="640" height="600">  
 
   <line ng-repeat="up in userProjects" 
-    x1="213" x2="426" y1="{{ up.y1 }}" y2="{{ up.y2 }}" style="stroke:{{up.color}};stroke-width:2"></line>
+    x1="30" x2="426" y1="{{ up.y1 + up.offset }}" y2="{{ up.y2 + up.offset }}" style="stroke:{{up.color}};stroke-width:6"></line>
 
-  <text ng-repeat="up in userProjects" x="203" y="{{ height - up.planned * scale }}" text-anchor="end">{{up.project}}</text>      
-  <text ng-repeat="up in userProjects" x="436" y="{{ height - up.reported * scale }}"> {{up.project}}</text>      
+  <text ng-repeat="up in userProjects" x="30" y="{{ up.y1 + up.offset }}" text-anchor="end">{{up.planned}}h</text>      
+  <text ng-repeat="up in userProjects" x="436" y="{{ up.y2 + up.offset }}"> {{up.reported}}h {{up.project}}</text>      
 </svg> 
