save project colors

--- a/directive/week/week.html
+++ b/directive/week/week.html
@@ -1,8 +1,11 @@
-<svg  width="640" height="600">  
+<div width="640" height="600">
 
-  <line ng-repeat="up in userProjects" 
-    x1="30" x2="426" y1="{{ up.y1 + up.offset }}" y2="{{ up.y2 + up.offset }}" style="stroke:{{up.color}};stroke-width:6"></line>
+  <svg>  
+    <line ng-repeat="up in userProjects" 
+      x1="30" x2="326" y1="{{ up.y1 + up.offset }}" y2="{{ up.y2 + up.offset }}" style="stroke:{{up.color}};stroke-width:6"></line>
 
-  <text ng-repeat="up in userProjects" x="30" y="{{ up.y1 + up.offset }}" text-anchor="end">{{up.planned}}h</text>      
-  <text ng-repeat="up in userProjects" x="436" y="{{ up.y2 + up.offset }}"> {{up.reported}}h {{up.project}}</text>      
-</svg> 
+    <text ng-repeat="up in userProjects" x="30" y="{{ up.y1 + up.offset }}" text-anchor="end">{{up.planned}}h</text>      
+    <text ng-repeat="up in userProjects" x="336" y="{{ up.y2 + up.offset }}"> {{up.reported}}h {{up.project}}</text>      
+  </svg>
+
+</div>
