--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
   <script src="partial/tabs/tabs.js"></script>
   <!-- Add New Partial JS Above -->
 
-  <ion-nav-view></ion-nav-view>
+  <ion-nav-view animation="slide-left-right"></ion-nav-view>
 
   
 </body>
