--- a/test/unit/index.html
+++ b/test/unit/index.html
@@ -23,6 +23,10 @@
   <script src="../../bower_components/ionic/js/ionic.js"></script>
   <script src="../../bower_components/ionic/js/ionic-angular.js"></script>
 
+  <script src="../../bower_components/d3/d3.js"></script>
+  <script src="../../bower_components/nvd3/nv.d3.js"></script>
+  <script src="../../bower_components/angularjs-nvd3-directives/dist/angularjs-nvd3-directives.js"></script>
+
   <!-- Test libraries -->
   <script src="../../node_modules/mocha/mocha.js"></script>
   <script>mocha.setup('bdd');</script>
