--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
   <meta charset="utf-8">
 
   <!-- App LESS -->
-  <link href="css/app.less" type="text/css" rel="stylesheet/less">
-  <link href="bower_components/ionic/css/ionic.css" rel="stylesheet" type="text/css" >
+  <link href="css/app.less" type="text/css" rel="stylesheet/less" />
+  <link rel="stylesheet" href="bower_components/ionic/css/ionic.css" />
+  <link rel="stylesheet" href="bower_components/nvd3/nv.d3.css"/>
 
 </head>
 <body animation="slide-left-right-ios7" ng-app="iteam-dashboard">
@@ -26,6 +27,10 @@
   <script src="bower_components/moment/moment.js"></script>
   <script src="bower_components/ionic/js/ionic.js"></script>
   <script src="bower_components/ionic/js/ionic-angular.js"></script>
+
+  <script src="bower_components/d3/d3.js"></script>
+  <script src="bower_components/nvd3/nv.d3.js"></script>
+  <script src="bower_components/angularjs-nvd3-directives/dist/angularjs-nvd3-directives.js"></script>
 
   <!-- Main App JS -->
   <script src="js/setup.js"></script>
