weekproject and weekproject.user states, setting the current week does not work yet

--- a/index.html
+++ b/index.html
@@ -57,6 +57,8 @@
   <script src="partial/week/user/user.js"></script>
   <script src="partial/menu/menu.js"></script>
   <script src="partial/tabs/tabs.js"></script>
+  <script src="partial/projectWeek/projectWeek.js"></script>
+  <script src="partial/projectWeek/user/user.js"></script>
   <!-- Add New Partial JS Above -->
 
   <ion-nav-view animation="slide-left-right"></ion-nav-view>
