--- a/test/unit/index.html
+++ b/test/unit/index.html
@@ -63,6 +63,8 @@
   <script src="../../partial/week/user/week/user.js"></script>
   <script src="../../partial/menu/menu.js"></script>
   <script src="../../partial/tabs/tabs.js"></script>
+  <script src="../../partial/projectWeek/projectWeek.js"></script>
+  <script src="../../partial/projectWeek/user/user.js"></script>
   <!-- Add New Partial JS Above -->
 
 
@@ -92,6 +94,8 @@
   <script src="controller/week/user.js"></script>
   <script src="controller/menu.js"></script>
   <script src="controller/tabs.js"></script>
+  <script src="controller/projectWeek.js"></script>
+  <script src="controller/projectWeek/user.js"></script>
   <!-- Add New Partial Test JS Above -->
 
   <!-- run mocha after all test are loaded -->
