--- a/index.html
+++ b/index.html
@@ -61,7 +61,27 @@
   <script src="partial/projectWeek/user/user.js"></script>
   <!-- Add New Partial JS Above -->
 
-  <ion-nav-view animation="slide-left-right"></ion-nav-view>
+  <ion-nav-view animation="slide-left-right">
+    <ion-nav-bar></ion-nav-bar>
+    <ion-tabs class="tabs-icon-top tabs-default">
+
+      <ion-tab title="Personal" icon="icon ion-person" href="#/personal">
+        <ion-nav-view name="personal-tab"></ion-nav-view>
+      </ion-tab>
+
+
+      <ion-tab title="Project" icon="icon ion-heart" href="#/project">
+        <ion-nav-view name="project-tab"></ion-nav-view>
+      </ion-tab>
+
+
+      <ion-tab title="About" icon="icon ion-search" href="#/tab/about">
+        <ion-nav-view name="about-tab"></ion-nav-view>
+      </ion-tab>
+
+    </ion-tabs>
+
+  </ion-nav-view>
 
   
 </body>
