Redefined states, cleanup solution, back from details state doesn't work yet.

--- a/test/unit/index.html
+++ b/test/unit/index.html
@@ -58,13 +58,10 @@
   <!-- Add New Filter JS Above -->
 
   <!-- Partial JS -->
-  <script src="../../partial/week/week.js"></script>
-  <script src="../../partial/week/project/week/project.js"></script>
-  <script src="../../partial/week/user/week/user.js"></script>
-  <script src="../../partial/menu/menu.js"></script>
-  <script src="../../partial/tabs/tabs.js"></script>
-  <script src="../../partial/projectWeek/projectWeek.js"></script>
-  <script src="../../partial/projectWeek/user/user.js"></script>
+  <script src="../../partial/personal/personal.js"></script>
+  <script src="../../partial/project/project.js"></script>
+  <script src="../../partial/personal/details/details.js"></script>
+  <script src="../../partial/project/details/details.js"></script>
   <!-- Add New Partial JS Above -->
 
 
@@ -89,13 +86,10 @@
   <!-- Add New Filter Test JS Above -->
 
   <!-- Partial Test JS -->
-  <script src="controller/week.js"></script>
-  <script src="controller/week/project.js"></script>
-  <script src="controller/week/user.js"></script>
-  <script src="controller/menu.js"></script>
-  <script src="controller/tabs.js"></script>
-  <script src="controller/projectWeek.js"></script>
-  <script src="controller/projectWeek/user.js"></script>
+  <script src="controller/personal.js"></script>
+  <script src="controller/project.js"></script>
+  <script src="controller/personal/details.js"></script>
+  <script src="controller/project/details.js"></script>
   <!-- Add New Partial Test JS Above -->
 
   <!-- run mocha after all test are loaded -->
