--- a/index.html
+++ b/index.html
@@ -52,13 +52,10 @@
   <!-- Add New Filter JS Above -->
 
   <!-- Partial JS -->
-  <script src="partial/week/week.js"></script>
-  <script src="partial/week/project/project.js"></script>
-  <script src="partial/week/user/user.js"></script>
-  <script src="partial/menu/menu.js"></script>
-  <script src="partial/tabs/tabs.js"></script>
-  <script src="partial/projectWeek/projectWeek.js"></script>
-  <script src="partial/projectWeek/user/user.js"></script>
+  <script src="partial/personal/personal.js"></script>
+  <script src="partial/project/project.js"></script>
+  <script src="partial/personal/details/details.js"></script>
+  <script src="partial/project/details/details.js"></script>
   <!-- Add New Partial JS Above -->
 
   <ion-nav-view animation="slide-left-right">
