--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
   <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
   <script src="bower_components/angular-animate/angular-animate.js"></script>
   <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
+  <script src="bower_components/angular-md5/angular-md5.js"></script>
   <script src="bower_components/moment/moment.js"></script>
   <script src="bower_components/ionic/js/ionic.js"></script>
   <script src="bower_components/ionic/js/ionic-angular.js"></script>
@@ -39,10 +40,10 @@
   <script src="service/week.js"></script>
   <script src="service/project.js"></script>
   <script src="service/user.js"></script>
-  <!-- Add New Service JS Above --> 
+  <!-- Add New Service JS Above -->
 
   <!-- Model JS -->
-  <!-- Add New Model JS Above --> 
+  <!-- Add New Model JS Above -->
 
   <!-- Directive JS -->
   <script src="directive/week/week.js"></script>
@@ -59,7 +60,9 @@
   <!-- Add New Partial JS Above -->
 
   <ion-nav-view animation="slide-left-right">
+    <!--
     <ion-nav-bar></ion-nav-bar>
+    -->
     <ion-tabs class="tabs-icon-top tabs-default">
 
       <ion-tab title="Personal" icon="icon ion-person" href="#/personal">
@@ -71,15 +74,15 @@
         <ion-nav-view name="project-tab"></ion-nav-view>
       </ion-tab>
 
-
+      <!--
       <ion-tab title="About" icon="icon ion-search" href="#/tab/about">
         <ion-nav-view name="about-tab"></ion-nav-view>
       </ion-tab>
-
+      -->
     </ion-tabs>
 
   </ion-nav-view>
 
-  
+
 </body>
 </html>
