--- a/test/unit/index.html
+++ b/test/unit/index.html
@@ -19,6 +19,7 @@
   <script src="../../bower_components/angular-sanitize/angular-sanitize.js"></script>
   <script src="../../bower_components/angular-animate/angular-animate.js"></script>
   <script src="../../bower_components/angular-ui-router/release/angular-ui-router.js"></script>
+  <script src="../../bower_components/angular-md5/angular-md5.js"></script>
   <script src="../../bower_components/moment/moment.js"></script>
   <script src="../../bower_components/ionic/js/ionic.js"></script>
   <script src="../../bower_components/ionic/js/ionic-angular.js"></script>
@@ -45,10 +46,10 @@
   <script src="../../service/week.js"></script>
   <script src="../../service/project.js"></script>
   <script src="../../service/user.js"></script>
-  <!-- Add New Service JS Above --> 
+  <!-- Add New Service JS Above -->
 
   <!-- Model JS -->
-  <!-- Add New Model JS Above --> 
+  <!-- Add New Model JS Above -->
 
   <!-- Directive JS -->
   <script src="../../directive/week/week.js"></script>
@@ -72,10 +73,10 @@
   <script src="service/week.js"></script>
   <script src="service/project.js"></script>
   <script src="service/user.js"></script>
-  <!-- Add New Service Test JS Above --> 
+  <!-- Add New Service Test JS Above -->
 
   <!-- Model Test JS -->
-  <!-- Add New Model Test JS Above --> 
+  <!-- Add New Model Test JS Above -->
 
   <!-- Directive Test JS -->
   <script src="directive/weekChooser.js"></script>
@@ -99,6 +100,6 @@
       mocha.run();
     }
   </script>
-  
+
 </body>
 </html>
