Two days work and no commit
I added test-material to project-details
Also, two new services! A color- and a avatar-service.

None are done. The avatar-service needs to translate our 3 letter username
into our regular long-version mail.

The coloring is at the moment hardcoded into the colors-service.

--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
   <script src="service/week.js"></script>
   <script src="service/project.js"></script>
   <script src="service/user.js"></script>
+  <script src="service/colors.js"></script>
+  <script src="service/avatar.js"></script>
   <!-- Add New Service JS Above -->
 
   <!-- Model JS -->
