Usercolors are on projectpages

--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
 
   <!-- Directive JS -->
   <script src="directive/week/week.js"></script>
+  <script src="directive/progress-bar.js"></script>
   <!-- Add New Directive JS Above -->
 
   <!-- Filter JS -->
