--- a/test/unit/index.html
+++ b/test/unit/index.html
@@ -55,6 +55,7 @@
 
   <!-- Directive JS -->
   <script src="../../directive/week/week.js"></script>
+  <script src="../../directive/progress-bar.js"></script>
   <!-- Add New Directive JS Above -->
 
   <!-- Filter JS -->
@@ -85,6 +86,7 @@
   <!-- Directive Test JS -->
   <script src="directive/weekChooser.js"></script>
   <script src="directive/week.js"></script>
+  <script src="directive/progress-bar.js"></script>
   <!-- Add New Directive Test JS Above -->
 
   <!-- Filter Test JS -->
