--- a/test/unit/index.html
+++ b/test/unit/index.html
@@ -55,7 +55,7 @@
 
   <!-- Directive JS -->
   <script src="../../directive/week/week.js"></script>
-  <script src="../../directive/progress-bar.js"></script>
+  <script src="../../directive/badge/badge.js"></script>
   <!-- Add New Directive JS Above -->
 
   <!-- Filter JS -->
@@ -87,6 +87,7 @@
   <script src="directive/weekChooser.js"></script>
   <script src="directive/week.js"></script>
   <script src="directive/progress-bar.js"></script>
+  <script src="directive/badge.js"></script>
   <!-- Add New Directive Test JS Above -->
 
   <!-- Filter Test JS -->
