--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
   <meta charset="utf-8">
 
   <!-- App LESS -->
-  <link href="css/app.less" type="text/css" rel="stylesheet/less" />
   <link rel="stylesheet" href="bower_components/ionic/css/ionic.css" />
   <link rel="stylesheet" href="bower_components/nvd3/nv.d3.css"/>
+  <link href="css/app.less" type="text/css" rel="stylesheet/less" />
 
 </head>
 <body animation="slide-left-right-ios7" ng-app="iteam-dashboard">
@@ -49,7 +49,7 @@
 
   <!-- Directive JS -->
   <script src="directive/week/week.js"></script>
-  <script src="directive/progress-bar.js"></script>
+  <script src="directive/badge/badge.js"></script>
   <!-- Add New Directive JS Above -->
 
   <!-- Filter JS -->
