Added summary for a project (buggy)

--- a/directive/donut-chart/donut-chart.html
+++ b/directive/donut-chart/donut-chart.html
@@ -24,4 +24,8 @@
     color="color('reported', 15)">
     <svg width="350" height="350"></svg>
   </nvd3-pie-chart>
+
+  <div class="summary" data-ng-show="summary">
+    <strong>{{summary.planned}}</strong> / {{summary.reported}}
+  </div>
 </div>
