Removed the avatar-service

--- a/directive/week/week.html
+++ b/directive/week/week.html
@@ -1,8 +1,7 @@
 <div width="640" height="600" class="list card">
-  <div class="item item-avatar">
-    <img data-ng-src="{{avatar}}" />
-    <h2>{{user}}</h2>
-    <p>{{week}}</p>
+  <div class="item item-icon-left item-icon-right">
+    <badge user="user"></badge>
+    <strong class="user">{{user}}</strong>
   </div>
   <div class="item item-body">
     <svg class="full-image" height="700">
