--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@
   <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
   <script src="bower_components/angular-animate/angular-animate.js"></script>
   <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
-  <script src="bower_components/angular-md5/angular-md5.js"></script>
   <script src="bower_components/moment/moment.js"></script>
   <script src="bower_components/ionic/js/ionic.js"></script>
   <script src="bower_components/ionic/js/ionic-angular.js"></script>
@@ -41,7 +40,6 @@
   <script src="service/project.js"></script>
   <script src="service/user.js"></script>
   <script src="service/colors.js"></script>
-  <script src="service/avatar.js"></script>
   <!-- Add New Service JS Above -->
 
   <!-- Model JS -->
@@ -64,29 +62,17 @@
   <!-- Add New Partial JS Above -->
 
   <ion-nav-view animation="slide-left-right">
-    <!--
-    <ion-nav-bar></ion-nav-bar>
-    -->
     <ion-tabs class="tabs-icon-top tabs-default">
 
       <ion-tab title="Personal" icon="icon ion-person" ng-click="goTo('personal')">
         <ion-nav-view name="personal-tab"></ion-nav-view>
       </ion-tab>
 
-
-      <ion-tab title="Project" icon="icon ion-heart" ng-click="goTo('project')">
+      <ion-tab title="Project" icon="icon ion-briefcase" ng-click="goTo('project')">
         <ion-nav-view name="project-tab"></ion-nav-view>
       </ion-tab>
 
-      <!--
-      <ion-tab title="About" icon="icon ion-search" href="#/tab/about">
-        <ion-nav-view name="about-tab"></ion-nav-view>
-      </ion-tab>
-      -->
     </ion-tabs>
-
   </ion-nav-view>
-
-
 </body>
 </html>
