The amount of hours each project/user has on the listing page- got added

--- a/directive/donut-chart/donut-chart.html
+++ b/directive/donut-chart/donut-chart.html
@@ -26,6 +26,6 @@
   </nvd3-pie-chart>
 
   <div class="summary" data-ng-show="summary">
-    <strong>{{summary.planned}}</strong> / {{summary.reported}}
+    <strong>{{summary.planned}}h</strong> / {{summary.reported}}h
   </div>
 </div>
