--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
   <!-- Add New Directive JS Above -->
 
   <!-- Filter JS -->
+  <script src="filter/sort-by-department-name.js"></script>
   <!-- Add New Filter JS Above -->
 
   <!-- Partial JS -->
