--- a/test/unit/index.html
+++ b/test/unit/index.html
@@ -58,6 +58,8 @@
   <!-- Add New Directive JS Above -->
 
   <!-- Filter JS -->
+  <script src="../../filter/sort-by-customer-name.js"></script>
+  <script src="../../filter/sort-by-department-name.js"></script>
   <!-- Add New Filter JS Above -->
 
   <!-- Partial JS -->
@@ -91,6 +93,7 @@
   <!-- Add New Directive Test JS Above -->
 
   <!-- Filter Test JS -->
+  <script src="filter/sort-by-department-name.js"></script>
   <!-- Add New Filter Test JS Above -->
 
   <!-- Partial Test JS -->
