--- a/directive/week/week.html
+++ b/directive/week/week.html
@@ -5,7 +5,7 @@
         x1="30" x2="163" y1="{{ up.y1 + up.offset }}" y2="{{ up.y2 + up.offset }}" style="stroke:{{up.color}};stroke-width:6" ng-cloak></line>
 
       <text ng-repeat="up in userProjects" x="30" y="{{ up.y1 + up.offset }}" text-anchor="end">{{up.planned}}h</text>
-      <text ng-repeat="up in userProjects" x="173" y="{{ up.y2 + up.offset }}"> {{up.reported}}h {{up.project}}</text>
+      <text ng-repeat="up in userProjects" x="173" y="{{ up.y2 + up.offset }}"> {{up.reported + up.calendar}}h {{up.project}}</text>
     </svg>
 
     <p>{{summary.text}}</p>
