--- a/directive/badge/badge.html
+++ b/directive/badge/badge.html
@@ -1,3 +1,5 @@
-<span class="user-badge badge" style="{{userColor()}}">
-  <i class="icon ion-person"></i>
+<span class="user-badge badge">
+  <span class="circle" style="{{userColor()}}">
+    <i class="icon ion-person"></i>
+  </span>
 </span>
