--- a/test/unit/index.html
+++ b/test/unit/index.html
@@ -67,6 +67,7 @@
   <script src="../../partial/personal/details/details.js"></script>
   <script src="../../partial/project/details/details.js"></script>
   <script src="../../partial/week/week.js"></script>
+  <script src="../../partial/menu/menu.js"></script>
   <!-- Add New Partial JS Above -->
 
 
@@ -100,6 +101,7 @@
   <script src="controller/personal/details.js"></script>
   <script src="controller/project/details.js"></script>
   <script src="controller/week.js"></script>
+  <script src="controller/menu.js"></script>
   <!-- Add New Partial Test JS Above -->
 
   <!-- run mocha after all test are loaded -->
