--- a/index.html
+++ b/index.html
@@ -61,11 +61,23 @@
   <script src="partial/personal/details/details.js"></script>
   <script src="partial/project/details/details.js"></script>
   <script src="partial/week/week.js"></script>
+  <script src="partial/menu/menu.js"></script>
   <!-- Add New Partial JS Above -->
 
 
-    <ion-nav-view animation="slide-left-right"></ion-nav-view>
+  
 
+  <ion-side-menus ng-controller="WeekCtrl">
+    <!-- Center content -->
+    <ion-side-menu-content >
+      <ion-nav-view name="main-view" animation="slide-left-right"></ion-nav-view>
+    </ion-side-menu-content>
+
+    <!-- Left menu -->
+    <ion-side-menu side="left">
+      <ion-nav-view name="menu"></ion-nav-view>
+    </ion-side-menu>
+  </ion-side-menus>
  
 </body>
 </html>
