--- a/index.html
+++ b/index.html
@@ -65,19 +65,19 @@
   <!-- Add New Partial JS Above -->
 
 
-  
+
 
   <ion-side-menus ng-controller="WeekCtrl">
     <!-- Center content -->
-    <ion-side-menu-content >
+    <ion-side-menu-content>
       <ion-nav-view name="main-view" animation="slide-left-right"></ion-nav-view>
     </ion-side-menu-content>
 
     <!-- Left menu -->
-    <ion-side-menu side="left">
+    <ion-side-menu side="left" class="menu-left">
       <ion-nav-view name="menu"></ion-nav-view>
     </ion-side-menu>
   </ion-side-menus>
- 
+
 </body>
 </html>
