added homescreen notice

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="bower_components/ionic/css/ionic.css" />
   <link rel="stylesheet" href="bower_components/nvd3/nv.d3.css"/>
   <link href="css/app.less" type="text/css" rel="stylesheet/less" />
+  <link rel="stylesheet" type="text/css" href="bower_components/add-to-homescreen/style/addtohomescreen.css">
 
 </head>
 <body animation="slide-left-right-ios7" ng-app="iteam-dashboard">
@@ -31,6 +32,10 @@
   <script src="bower_components/d3/d3.js"></script>
   <script src="bower_components/nvd3/nv.d3.js"></script>
   <script src="bower_components/angularjs-nvd3-directives/dist/angularjs-nvd3-directives.js"></script>
+  <script src="bower_components/add-to-homescreen/src/addtohomescreen.js"></script>
+  <script>
+  addToHomescreen();
+  </script>
 
   <!-- Main App JS -->
   <script src="js/setup.js"></script>
