--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta charset="utf-8">
+  <meta name="apple-mobile-web-app-capable" content="yes" />
+  <meta name="apple-mobile-web-app-title" content="Dashboard">
 
   <!-- App LESS -->
   <link rel="stylesheet" href="bower_components/ionic/css/ionic.css" />
