--- a/test/unit/index.html
+++ b/test/unit/index.html
@@ -66,6 +66,8 @@
   <script src="../../partial/project/project.js"></script>
   <script src="../../partial/personal/details/details.js"></script>
   <script src="../../partial/project/details/details.js"></script>
+  <script src="../../partial/menu/menu.js"></script>
+  <script src="../../partial/week/week.js"></script>
   <!-- Add New Partial JS Above -->
 
 
@@ -98,6 +100,8 @@
   <script src="controller/project.js"></script>
   <script src="controller/personal/details.js"></script>
   <script src="controller/project/details.js"></script>
+  <script src="controller/menu.js"></script>
+  <script src="controller/week.js"></script>
   <!-- Add New Partial Test JS Above -->
 
   <!-- run mocha after all test are loaded -->
