--- a/index.html
+++ b/index.html
@@ -66,19 +66,6 @@
   <script src="partial/week/week.js"></script>
   <!-- Add New Partial JS Above -->
 
-<!--   <ion-nav-view animation="slide-left-right">
-    <ion-tabs class="tabs-striped">
-
-      <ion-tab class="personal-tab bottom-tabs" title="Personal" icon="icon ion-person" ng-click="goTo('personal')">
-        <ion-nav-view name="personal-tab"></ion-nav-view>
-      </ion-tab>
-
-      <ion-tab class="project-tab bottom-tabs" title="Project" icon="icon ion-briefcase" ng-click="goTo('project')">
-        <ion-nav-view name="project-tab"></ion-nav-view>
-      </ion-tab>
-
-    </ion-tabs>
-  </ion-nav-view> -->
 
   <ion-side-menus ng-controller="WeekCtrl">
     <!-- Left menu -->
@@ -88,20 +75,9 @@
 
     <!-- Center content -->
     <ion-side-menu-content>
-      <ion-nav-view animation="slide-left-right">
-        <ion-tabs class="tabs-striped">
-
-          <ion-tab class="personal-tab bottom-tabs" title="Personal" icon="icon ion-person" ng-click="goTo('personal')">
-            <ion-nav-view name="personal-tab"></ion-nav-view>
-          </ion-tab>
-
-          <ion-tab class="project-tab bottom-tabs" title="Project" icon="icon ion-briefcase" ng-click="goTo('project')">
-            <ion-nav-view name="project-tab"></ion-nav-view>
-          </ion-tab>
-
-        </ion-tabs>
-      </ion-nav-view> 
+      <ion-nav-view name="main" animation="slide-left-right"></ion-nav-view> 
     </ion-side-menu-content>
+
   </ion-side-menus>
 </body>
 </html>
